# astro_events

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
ml_pipeline/: common.py  generate_embeddings.py  reduce_dimensions.py  train_model.py
ops/cloudflare/: cloudflared.example.yml
ops/systemd/: astro-events-api.service  astro-events-ingest.service  astro-events-ingest.timer  astro-events-pipeline.service  astro-events-pipeline.timer
pipelines/tess/astro_tess/: __init__.py  artifacts.py  cli.py  config.py  data_sources.py  export.py  features.py  models.py  pipeline.py  preprocess.py  scoring.py  sync.py
pipelines/transients/astro_transients/: __init__.py  cli.py  config.py  data_sources.py  export.py  models.py  pipeline.py  scoring.py  sync.py
scripts/: nightly_ingest.sh  nightly_pipeline.sh
services/: __init__.py
services/api/: Dockerfile  main.py
services/api/astro_api/: __init__.py  config.py  database.py  models.py  repositories.py  schemas.py
services/api/astro_api/cli/: __init__.py  ingest.py  ingest_transients.py  refresh_events.py
services/api/astro_api/services/: celestial_events.py  galaxy_map.py  ingestion.py  (+3 more)
services/web/: index.html  package-lock.json  package.json  vite.config.js
services/web/src/: App.jsx  App.test.jsx  api.js  styles.css
tests/: test_api.py  test_celestial_events_api.py  test_features.py  test_galaxy_map_api.py  test_golden_pipeline.py  test_ingestion.py  test_preprocess.py  test_scoring.py  test_transient_api.py  test_transient_ingestion.py  test_transient_pipeline.py
(+9 files in other folders)
