[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-event-intelligence"
version = "0.1.0"
description = "Astro Event Intelligence MVP for TESS anomaly detection and explanation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.28.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "matplotlib>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
ml = [
  "duckdb>=1.2.0",
  "hdbscan>=0.8.40",
  "pillow>=10.4.0",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "umap-learn>=0.5.7",
]
tess = [
  "lightkurve>=2.5.0",
]

[project.scripts]
astro-tess-nightly = "astro_tess.cli:main"
astro-transients-nightly = "astro_transients.cli:main"
astro-api-ingest = "astro_api.cli.ingest:main"
astro-api-ingest-transients = "astro_api.cli.ingest_transients:main"

[tool.setuptools.packages.find]
where = ["services/api", "pipelines/tess", "pipelines/transients"]
include = ["astro_api*", "astro_tess*", "astro_transients*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = []
